# encoder-firmware-2025

./: .bazelrc  .gitignore  .gitmodules  .mxproject  BUILD  CMakeCache.txt  CMakeLists.txt  CMakeLists_template.txt  MODULE.bazel  bazel-bin  bazel-encoder-firmware-2025  bazel-out  bazel-testlogs  build.ninja  cmake_install.cmake  encoder-firmware-2025.ioc
.github/workflows/: build_rel.yml  prerelease.yml
Core/Inc/: adc.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Core/Src/: adc.c  can.c  gpio.c  led.c  main.c  stm32l4xx_it.c  tim.c
USB_DEVICE/App/: usbd_cdc_if.c  usbd_desc.c
